--- a/question2.html
+++ b/question2.html
@@ -14,6 +14,7 @@
         age=30
         console.log(typeof age);// shows use typeof
         console.log(student instanceof Object);
+        delete student.residence
 
         
         
