--- a/question3.html
+++ b/question3.html
@@ -10,10 +10,19 @@
         num1=5
         num2=10
         multiple=num1*num2
+
         if(num1&& num2 >2){
             console.log("use of loical and");
         }
+
+        //use of ternary operator
+        console.log(num1 > num2? "num1 is greater" : "num2 is greater");
+
+        //use o f increment and decrement operator
+        num1++
+        num2--
         
+
 
     </script>
 </body>
